# qucs

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTE  Makefile.am  Makefile.common  README  ROADMAP  configure.ac
autotools/: tests.am
cmake/: readMakeList.cmake
examples/: CMakeLists.txt  IdealBalun.sch
qucs/: CMakeLists.txt  Makefile.am  element.h  imagewriter.cpp  main.cpp  misc.cpp  module.cpp  module.h  mouseactions.cpp  mouseactions.h  node.cpp  node.h  printerwriter.cpp  qucs.cpp  qucs.h  qucs_actions.cpp  qucs_functions.cpp  qucs_functions.h  qucs_init.cpp  qucsdoc.h  schematic.cpp  schematic.h  schematic_element.cpp  schematic_file.cpp  schematic_file_write.cpp  sharedObjectList.h  textdoc.cpp  viewpainter.cpp  wire.cpp  wire.h  wirelabel.h
qucs-activefilter/: CMakeLists.txt  qucsactivefilter.cpp
qucs-attenuator/: CMakeLists.txt
qucs-filter/: CMakeLists.txt
qucs-filter-v2/: CMakeLists.txt
qucs-lib/: CMakeLists.txt  symbolwidget.cpp  symbolwidget.h
qucs-powercombining/: CMakeLists.txt
qucs-rescodes/: CMakeLists.txt
qucs-transcalc/: CMakeLists.txt
qucs/components/: CMakeLists.txt  DLS_1ton.cpp  DLS_nto1.cpp  EKV26MOS.cpp  MESFET.cpp  ac_sim.cpp  am_modulator.cpp  ampere_ac.cpp  ampere_dc.cpp  ampere_noise.cpp  amplifier.cpp  andor4x2.cpp  andor4x3.cpp  andor4x4.cpp  attenuator.cpp  biast.cpp  binarytogrey4bit.cpp  bjt.cpp  bjtsub.cpp  bondwire.cpp  capacitor.cpp  capq.cpp  cccs.cpp  ccvs.cpp  circline.cpp  circularloop.cpp  circulator.cpp  coaxialline.cpp  comp_1bit.cpp  comp_2bit.cpp  comp_4bit.cpp  component.cpp  component.h  componentdialog.cpp  componentdialog.h  coplanar.cpp  coupler.cpp  cpwgap.cpp  cpwopen.cpp  cpwshort.cpp  (+135 more)
qucs/diagrams/: CMakeLists.txt  curvediagram.cpp  diagram.cpp  diagram.h  diagramdialog.cpp  diagramdialog.h  graph.cpp  graph.h  marker.cpp  polardiagram.cpp  psdiagram.cpp  rect3ddiagram.cpp  rectdiagram.cpp  smithdiagram.cpp  tabdiagram.cpp  timingdiagram.cpp  truthdiagram.cpp
qucs/dialogs/: CMakeLists.txt  changedialog.cpp  labeldialog.cpp  labeldialog.h  librarydialog.cpp  loaddialog.cpp  matchdialog.cpp  qucssettingsdialog.cpp  simmessage.cpp  sweepdialog.cpp  sweepdialog.h
qucs/paintings/: CMakeLists.txt  graphictext.cpp  id_text.cpp  portsymbol.cpp
qucs/tests/: CMakeLists.txt  SchematicTests.cpp  SchematicTests.h  netlist.sh
tests/: CMakeLists.txt  CMakeLists.txt.old  DocumentTests.cpp  DocumentTests.h  ElementTests.cpp  ElementTests.h  MakeList  Makefile.am  NetlistTests.cpp  NetlistTests.h  QucsAppTest.cpp  QucsAppTest.h  QucsTestApp.cpp  README  SchematicTests.cpp  SchematicTests.h  SignalTests.cpp  SignalTests.h  element.cpp  helloworld.sh  prj_log_compiler  run.sh
tests/AC_SW_resonance.prj/: resonance.sch.v
tests/AC_bandpass.prj/: bandpass.sch
tests/AC_groupdelay_ac.prj/: groupdelay_ac.sch.v
tests/DC_SW_diode.prj/: diode.sch.v
tests/misc.prj/: libparam.sch  nest1.sch  nest2.sch
tests/mixed.prj/: combinat.sch  ring.sch
tests/ref/: AC_SW_resonance.prj_resonance.sch.net  AC_SW_resonance.prj_resonance.sch.sch  AC_SW_resonance.prj_resonance.sch.vs  AC_SW_swr_meter.prj_swr_meter.sch.net  AC_SW_swr_meter.prj_swr_meter.sch.sch  AC_SW_swr_meter.prj_swr_meter.sch.vs  AC_bandpass.prj_bandpass.sch.net  AC_bandpass.prj_bandpass.sch.sch  AC_bandpass.prj_bandpass.sch.vs  AC_bandpass.prj_opa227.sch.sch  AC_bandpass.prj_opa227.sch.vs  AC_groupdelay_ac.prj_groupdelay_ac.sch.sch  AC_groupdelay_ac.prj_groupdelay_ac.sch.vs  AC_wattmeter.prj_wattmeter.sch.sch  AC_wattmeter.prj_wattmeter.sch.vs  DC_AC_SP_HF_BPF.prj_HF_BPF.sch.sch  DC_AC_SP_HF_BPF.prj_HF_BPF.sch.vs  DC_AC_SP_Spiral_BPF.prj_Spiral_BPF.sch.sch  DC_AC_SP_Spiral_BPF.prj_Spiral_BPF.sch.vs  DC_AC_SP_stab.prj_stab.sch.net  DC_AC_SP_stab.prj_stab.sch.sch  DC_AC_SP_stab.prj_stab.sch.vs  DC_AC_active_bp.prj_active_bp.sch.sch  DC_AC_active_bp.prj_active_bp.sch.vs  DC_AC_active_lp.prj_active_lp.sch.sch  DC_AC_active_lp.prj_active_lp.sch.vs  DC_AC_bbv.prj_bbv.sch.sch  DC_AC_bbv.prj_bbv.sch.vs  DC_AC_gain.prj_gain.sch.net  DC_AC_gain.prj_gain.sch.sch  DC_AC_gain.prj_gain.sch.vs  DC_AC_gain.prj_singleOPV.sch.sch  DC_AC_gain.prj_singleOPV.sch.vs  DC_AC_gyrator.prj_gyrator.sch.sch  DC_AC_gyrator.prj_gyrator.sch.vs  DC_AC_notch.prj_notch.sch.sch  DC_AC_notch.prj_notch.sch.vs  DC_AC_selective_amp.prj_selective_amp.sch.sch  DC_AC_selective_amp.prj_selective_amp.sch.vs  DC_SP_HICUM-fig10.prj_HICUM-fig10.sch.sch  (+169 more)
tests/tline.prj/: lpf0.sch  tline0.sch
translations/: CMakeLists.txt
